force-app/main/default/objects/CR_Version_Task_Group__c/CR_Version_Task_Group__c.object-meta.xml
<CustomObject>
    <label>CR Version Task Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CR Version Task Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>