force-app/main/default/objects/CR_Version_Task_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>