force-app/main/default/objects/CR_Version_Task_Group__c/fields/Display_Color__c.field-meta.xml
<CustomField>
    <fullName>Display_Color__c</fullName>
    <description>Color used on charts to display trend data for this group.</description>
    <inlineHelpText>Color used on charts to display trend data for this group.</inlineHelpText>
    <label>Display Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aquamarine: 7FFFD4</fullName>
            </value>
            <value>
                <fullName>Azure: F0FFFF</fullName>
            </value>
            <value>
                <fullName>Beige: F5F5DC</fullName>
            </value>
            <value>
                <fullName>Black: 000000</fullName>
            </value>
            <value>
                <fullName>Blue: 0000FF</fullName>
            </value>
            <value>
                <fullName>Brown: A52A2A</fullName>
            </value>
            <value>
                <fullName>Chocolate: D2691E</fullName>
            </value>
            <value>
                <fullName>Crimson: DC143C</fullName>
            </value>
            <value>
                <fullName>Cyan: 00FFFF</fullName>
            </value>
            <value>
                <fullName>Dark Blue: 00008B</fullName>
            </value>
            <value>
                <fullName>Dark Cyan: 008B8B</fullName>
            </value>
            <value>
                <fullName>Dark Gray: A9A9A9</fullName>
            </value>
            <value>
                <fullName>Dark Green: 006400</fullName>
            </value>
            <value>
                <fullName>Dark Magenta: 8B008B</fullName>
            </value>
            <value>
                <fullName>Dark Orange: FF8C00</fullName>
            </value>
            <value>
                <fullName>Dark Red: 8B0000</fullName>
            </value>
            <value>
                <fullName>Dark Slate Gray: 2F4F4F</fullName>
            </value>
            <value>
                <fullName>Deep Pink: FF1493</fullName>
            </value>
            <value>
                <fullName>Forest Green: 228B22</fullName>
            </value>
            <value>
                <fullName>Gold: FFD700</fullName>
            </value>
            <value>
                <fullName>Goldenrod: DAA520</fullName>
            </value>
            <value>
                <fullName>Gray: 808080</fullName>
            </value>
            <value>
                <fullName>Green: 008000</fullName>
            </value>
            <value>
                <fullName>Indigo: 4B0082</fullName>
            </value>
            <value>
                <fullName>Light Blue: ADD8E6</fullName>
            </value>
            <value>
                <fullName>Light Cyan: E0FFFF</fullName>
            </value>
            <value>
                <fullName>Light Green: 90EE90</fullName>
            </value>
            <value>
                <fullName>Light Grey: D3D3D3</fullName>
            </value>
            <value>
                <fullName>Light Pink: FFB6C1</fullName>
            </value>
            <value>
                <fullName>Light Yellow: FFFFE0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>