force-app/main/default/objects/CR_Version_Task_Group__c/fields/Group_Lead__c.field-meta.xml
<CustomField>
    <fullName>Group_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is the lead for this group.</description>
    <inlineHelpText>The user who is the lead for this group.</inlineHelpText>
    <label>Group Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CR_Version_Task_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>