force-app/main/default/objects/CR_Version_Task_Group__c/fields/Handles_Defects__c.field-meta.xml
<CustomField>
    <fullName>Handles_Defects__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Handles Defects</label>
    <type>Checkbox</type>
</CustomField>