force-app/main/default/objects/CR_Version_Task_Group__c/fields/Handles_Geocoder_Requests__c.field-meta.xml
<CustomField>
    <fullName>Handles_Geocoder_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handles Geocoder Requests</label>
    <type>Checkbox</type>
</CustomField>