force-app/main/default/objects/CR_Version_Task_Group__c/fields/Handles_Localizations__c.field-meta.xml
<CustomField>
    <fullName>Handles_Localizations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handles Localizations</label>
    <type>Checkbox</type>
</CustomField>