force-app/main/default/objects/CR_Version_Task_Group__c/fields/Handles_Unplanned_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Handles_Unplanned_Requirements__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Handles Unplanned Requirements</label>
    <type>Checkbox</type>
</CustomField>