force-app/main/default/objects/CR_Version_Task_Group__c/fields/Include_On_PD_Weekly_Status_Page__c.field-meta.xml
<CustomField>
    <fullName>Include_On_PD_Weekly_Status_Page__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this group is displayed on the PD Weekly Status page.</description>
    <inlineHelpText>Controls whether this group is displayed on the PD Weekly Status page.</inlineHelpText>
    <label>Include On PD Weekly Status Page</label>
    <type>Checkbox</type>
</CustomField>