force-app/main/default/objects/CR_Version_Task_Group__c/fields/Primary_Function__c.field-meta.xml
<CustomField>
    <fullName>Primary_Function__c</fullName>
    <description>The primary development activity of this group.</description>
    <inlineHelpText>The primary development activity of this group.</inlineHelpText>
    <label>Primary Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coding</fullName>
                <default>true</default>
                <label>Coding</label>
            </value>
            <value>
                <fullName>Tech Writing</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>